--- a/TravelApp/DesktopHost/View/Agent/NewAttractionView.xaml
+++ b/TravelApp/DesktopHost/View/Agent/NewAttractionView.xaml
@@ -6,7 +6,8 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:TravelApp.DesktopHost.View.Agent"
              xmlns:viewmodels="clr-namespace:TravelApp.DesktopHost.ViewModel.Component.Agent"
-             xmlns:views="clr-namespace:TravelApp.DesktopHost.View"
+             xmlns:views="clr-namespace:TravelApp.DesktopHost.View" 
+             xmlns:m="clr-namespace:Microsoft.Maps.MapControl.WPF;assembly=Microsoft.Maps.MapControl.WPF"
              mc:Ignorable="d" 
              Background="White"
              SizeChanged="Window_SizeChanged"
@@ -115,9 +116,10 @@
             <StackPanel Grid.Row="4"
                     Grid.Column="1"
                     Width="{Binding Width}"
-                    Height="110">
-               
-                
+                    Height="280">
+                <m:Map x:Name="myMap" CredentialsProvider="AuLWjg9zk0YyNOzdddizNFywS-R5879R6PnSVyiT_7T3X3SOnJe8TKz0PvlBO0c3" Mode="Aerial" Height="250"
+                       ToolTip="Double click on map to add a location marker"/>
+
             </StackPanel>
             <StackPanel Grid.Row="5"
                 Grid.Column="1"
