Deleted command for help

--- a/TravelApp/DesktopHost/View/Navigation/ClientNavigationView.xaml
+++ b/TravelApp/DesktopHost/View/Navigation/ClientNavigationView.xaml
@@ -140,8 +140,7 @@
                         BorderBrush="Transparent"
                         Foreground="#000000"
                         FontSize="{ Binding Navigation.TextFontSize }"
-                        FontWeight="Bold"
-                        Command="{ Binding Navigation.Help }"/>
+                        FontWeight="Bold"/>
                 </StackPanel>
             </TabItem.Header>
         </TabItem>
