--- a/TravelApp/MainWindow.xaml
+++ b/TravelApp/MainWindow.xaml
@@ -92,6 +92,10 @@
                 <views:ClientSoldTripsView/>
             </DataTemplate>
 
+            <DataTemplate DataType="{x:Type viewmodels:EditPlaceViewModel}">
+                <views:EditPlaceView/>
+            </DataTemplate>
+
         </Grid.Resources>
         <ContentControl Content="{Binding CurrentViewModel}" />
     </Grid>
