--- a/TravelApp/DesktopHost/View/Client/ClientTripDetailsView.xaml
+++ b/TravelApp/DesktopHost/View/Client/ClientTripDetailsView.xaml
@@ -74,6 +74,7 @@
                         Background="#DFE6F0"
                         BorderBrush="#DFE6F0"
                         Padding="2" 
+                        Visibility="{Binding EditVisibility}"
                         Margin="0 0 70 0">
                         <StackPanel Orientation="Horizontal">
                             <Viewbox Width="25" Height="25">
