--- a/TravelApp/DesktopHost/View/Agent/AgentStayEatView.xaml
+++ b/TravelApp/DesktopHost/View/Agent/AgentStayEatView.xaml
@@ -280,7 +280,7 @@
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <Button Command="{Binding DataContext.EditPlace, ElementName=MyDataGrid}" Cursor="Hand" Background="White" BorderBrush="LightGray" BorderThickness="3" Margin="0 0 5 0" ToolTip="Edit item"
-                                            >
+                                            CommandParameter="{Binding}">
                                         <materialDesign:PackIcon Kind="Edit" Width="16" Height="16" Foreground="Black"/>
                                     </Button>
                                 </DataTemplate>
