--- a/TravelApp/DesktopHost/View/Client/ClientTripDetailsView.xaml
+++ b/TravelApp/DesktopHost/View/Client/ClientTripDetailsView.xaml
@@ -7,9 +7,10 @@
              mc:Ignorable="d" 
              xmlns:viewmodel="clr-namespace:TravelApp.DesktopHost.ViewModel"
              d:DesignHeight="450" d:DesignWidth="800"
-             d:DataContext="{d:DesignInstance Type=viewmodel:ClientTripDetailsView}"
+             d:DataContext="{d:DesignInstance Type=viewmodel:ClientTripDetailsViewModel}"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:components="clr-namespace:TravelApp.DesktopHost.View"
+             xmlns:components="clr-namespace:TravelApp.DesktopHost.View" xmlns:m="clr-namespace:Microsoft.Maps.MapControl.WPF;assembly=Microsoft.Maps.MapControl.WPF"
+             Background="White"
              SizeChanged="Window_SizeChanged">
     <Grid>
         <Grid.RowDefinitions>
@@ -583,13 +584,28 @@
 
                     <TextBlock
                         Grid.Row="0"
-                        Text="Check details on the map"
-                        Margin="100 100 0 100"
+                        Text="CHECK TRIP DETAILS ON MAP"
+                        Margin="100 100 0 40"
                         Foreground="#1E2F97"
                         FontWeight="Bold"
+                        FontSize="25"
                         />
-                    
-                    <!-- TODO : Add here maps and set Grid.Row to 1 -->
+                    <Grid Grid.Row="1" Margin="0,0,0,80">
+
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="3*" />
+                            <ColumnDefinition Width="1*" />
+                        </Grid.ColumnDefinitions>
+                        <!-- ths is row for the maps -->
+                            <m:Map  Grid.Column="0" Margin="120, 0, 70, 0"
+                        x:Name="myMap" CredentialsProvider="AuLWjg9zk0YyNOzdddizNFywS-R5879R6PnSVyiT_7T3X3SOnJe8TKz0PvlBO0c3" Mode="road" Height="250"
+                       ToolTip="Preview of places and attractions for this trip"/>
+                        <StackPanel Grid.Column="1">
+                            <Label>Map Legend</Label>
+                            <Label>Map Legend</Label>
+                            <Label>Map Legend</Label>
+                        </StackPanel>
+                    </Grid>
                 </Grid>
 
                 <Grid Grid.Row="6">
