--- a/TravelApp/DesktopHost/View/Agent/AgentAttractionsView.xaml
+++ b/TravelApp/DesktopHost/View/Agent/AgentAttractionsView.xaml
@@ -10,6 +10,11 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              d:DesignHeight="450" d:DesignWidth="800"
              xmlns:components="clr-namespace:TravelApp.DesktopHost.View"
+             xmlns:l="clr-namespace:TravelApp"
+             Focusable="True"
+             l:HelpProvider.HelpKey="allAttractionsAgent"
+             GotFocus="SetHelpKey"
+             Loaded="UserControl_Loaded"
              SizeChanged="Window_SizeChanged">
     <Grid>
         <Grid.RowDefinitions>
